--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
 
     <script src="column.js"></script>
-    <script src="row.js"></script>
+    <script src="application.js"></script>
     <script src="note.js"></script>
     <script src="main.js"></script>
 </body>
